# agent-monitor

./: .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LANGFUSE_V3_MIGRATION.md  README.md  app.py  pyproject.toml  requirements-dev.txt  requirements.txt  run-dashboard.sh  run-upgrade-agent.py  run-upgrade-agent.sh  setup-langfuse.sh  test_app.py  upgrade-agent.plist
.github/: dependabot.yml
.github/workflows/: ci.yml  test-runner.yml  upgrade-on-alert.yml
.opencode/plans/: 2026-04-04-self-hosted-runner-upgrade-agent.md
docs/plans/: upgrade-agent-v2-vulnerability-focused.md
launchd/: com.user.agent-dashboard.plist
scripts/: setup-hooks.sh
templates/: index.html  logs.html
tests/: conftest.py  test_upgrade_agent.py
upgrade_agent/: __init__.py  agent.py  config.py  constants.py  rate_limiter.py  state.py
upgrade_agent/decision/: __init__.py  risk_scorer.py  test_coverage.py
upgrade_agent/prompts/: reason.py
upgrade_agent/skills/: base.py
upgrade_agent/tools/: advisory.py  code_modifier.py  cve_revalidator.py  dependencies.py  docker.py  execution.py  github.py  health_checker.py  langfuse.py  memory.py  nodejs.py  poetry.py  state_recovery.py
