[project]
name = "agent-monitor"
version = "0.1.0"
requires-python = ">=3.9"
dependencies = []

[tool.ruff]
target-version = "py39"
line-length = 88
indent-width = 4

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "RUF",    # Ruff-specific rules
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "E722",   # bare except (legacy code)
    "E402",   # module level import not at top (common in tools)
    "E712",   # comparison to True/False
    "E741",   # ambiguous variable name (legacy code)
    "F841",   # local variable assigned but never used
    "F403",   # star import (legacy code)
    "RUF013", # implicit Optional (legacy code)
    "B008",   # do not perform function calls in argument defaults
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.mypy]
python_version = "3.9"
warn_return_any = false
warn_unused_ignores = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = false
no_implicit_optional = false
warn_redundant_casts = false
warn_unused_configs = false
disallow_untyped_decorators = false
no_implicit_reexport = false
ignore_missing_imports = true
ignore_assignment_mismatch = true

[[tool.mypy.overrides]]
module = "upgrade_agent.*"
ignore_errors = true

[[tool.mypy.overrides]]
module = [
    "langchain.*",
    "langgraph.*",
    "langfuse.*",
    "flask.*",
    "pydantic.*",
    "docker.*",
]
ignore_missing_imports = true
