[project]
name = "agent-monitor"
version = "0.1.0"
requires-python = ">=3.9"
dependencies = []

[tool.ruff]
target-version = "py39"
line-length = 88
indent-width = 4

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "RUF",    # Ruff-specific rules
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "E402",   # module level import not at top (conditional loading in tools)
    "B008",   # do not perform function calls in argument defaults (langchain pattern)
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_configs = true
disallow_untyped_decorators = false
no_implicit_reexport = false
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [
    "langchain.*",
    "langgraph.*",
    "langfuse.*",
    "flask.*",
    "pydantic.*",
    "docker.*",
    "httpx.*",
    "requests.*",
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "upgrade_agent.agent"
ignore_errors = false
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = false
